--- a/templates/index.html
+++ b/templates/index.html
@@ -1,57 +1,8 @@
-﻿{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Multimarcos Infante</title>
-    <link rel="stylesheet" href="{% static 'css/components.css' %}">
-    <link rel="stylesheet" href="{% static 'css/icons.css' %}">
-    <link rel="stylesheet" href="{% static 'css/responsee.css' %}">
-    <link rel="stylesheet" href="{% static 'owl-carousel/owl.carousel.css' %}">
-    <link rel="stylesheet" href="{% static 'owl-carousel/owl.theme.css' %}">
-    <link rel="stylesheet" href="{% static 'css/lightcase.css' %}">
-    <!-- CUSTOM STYLE -->      
-    <link rel="stylesheet" href="{% static 'css/template-style.css' %}">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,400,600,900&subset=latin-ext" rel="stylesheet"> 
-    <script type="text/javascript" src="{% static 'js/jquery-1.8.3.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script> 
-  </head>
+﻿{%extends "base.html" %}
+{% load staticfiles %}
 
-  <body class="size-1140">
-  	<!-- PREMIUM FEATURES BUTTON -->
-  	<a target="_blank" class="hide-s" href="/" style="position:fixed;top:120px;right:-14px;z-index:10;"><img src="{% static 'img/phone.png' %}" alt=""></a>
-    <div id="page-wrapper">
-      <!-- HEADER -->
-      <header role="banner" class="position-absolute margin-top-30 margin-m-top-0 margin-s-top-0">    
-        <!-- Top Navigation -->
-        <nav class="background-transparent background-transparent-hightlight full-width sticky">
-          <div class="s-12 l-2">
-            <a href="index.html" class="logo">
-              <!-- Logo version before sticky nav -->
-              <img class="logo-before" src="{% static 'img/logo-dark.png' %}" alt="">
-              <!-- Logo version after sticky nav -->
-              <img class="logo-after" src="{% static 'img/logo-dark.png' %}" alt="">
-            </a>
-          </div>
-          <br>
-          <div class="s-12 l-10">
-            <div class="top-nav right">
-              <p class="nav-text"></p>
-              <ul class="right chevron">
-                <li><a href="/">Inicio</a></li>
-                <li><a href="/">Marcos</a></li>
-                <li><a href="/">Cajas</a></li>
-                <li><a href="/">Recuperación de Fotografías</a></li>
-                <li><a href="/">Litografías</a></li>
-                <li><a href="/about">Acerca de nosotros</a></li>             
-                <li><a href="/contact">Contacto</a></li>
-              </ul>
-            </div>
-          </div>  
-        </nav>
-      </header>
-      
+{%block content %}
+{%include 'snippets/botonfijo.html'%}      
       <!-- MAIN -->
       <main role="main">
         <!-- Content -->
@@ -234,62 +185,5 @@
           </div>  
         </article>
       </main>
-      
-      <!-- FOOTER -->
-      <footer>
-        <!-- Contact Us -->
-        <div class="background-dark padding text-center footer-social">
-          <a class="margin-right-10" target="_blank" href="https://es-la.facebook.com/Multimarcos-844604912225186/"><i class="icon-facebook_circle text-size-30"></i> <span class="text-strong text-white hide-s hide-m">FACEBOOK</span></a>
-          <a class="margin-right-10" target="_blank" href="https://www.instagram.com"><i class="icon-instagram_circle text-size-30"></i> <span class="text-strong text-white hide-s hide-m">INSTAGRAM</span></a>
-                                                                                 
-        </div>
 
-        <!-- Main Footer -->
-        <section class="section-small-padding text-center background-dark full-width">
-          <div class="line">
-            <div class="margin">
-              <!-- Collumn 1 -->              
-              <div class="s-12 m-12 l-4 margin-m-bottom-30">
-                <h3 class="text-size-16">Dirección</h3>
-                <p class="text-size-14">
-                   Rio Balsas. Supermanzana 3, casa 31. Fracc. José de La Mora. Ixtapaluca. Edo. de México.
-                  C.P. 56560<br>
-                   Ixtapaluca Edo. México<br> 
-                   México
-                </p>               
-              </div>
-              <!-- Collumn 2 -->
-              <div class="s-12 m-12 l-4 margin-m-bottom-30">
-                <h3 class="text-size-16">Correo Electrónico</h3>
-                <p class="text-size-14">
-                   multimarcos_68@hotmail.com<br>
-                </p>              
-              </div>
-              <!-- Collumn 3 -->
-              <div class="s-12 m-12 l-4 ">
-                <h3 class="text-size-16">Números Telefónicos</h3>
-                <p class="text-size-14">
-                   Tel: (55) 26 45 96 53<br>
-                   Cel: 55 31 55 34 35<br>
-                   
-                </p>             
-              </div>
-            </div>
-          </div>  
-        </section>
-        <hr class="break margin-top-bottom-0" style="border-color: rgba(0, 0, 0, 0.80);">
-        
-        <!-- Bottom Footer -->
-        <section class="padding background-dark full-width">
-          <div class="text-center">
-            <p class="text-size-12">Copyright 2017</p>
-          </div>
-        </section>
-      </footer>
-    </div>
-    <script type="text/javascript" src="{% static 'js/responsee.js'%}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery.events.touch.js'%}"></script>
-    <script type="text/javascript" src="{% static 'owl-carousel/owl.carousel.js'%}"></script>
-    <script type="text/javascript" src="{% static 'js/template-scripts.js'%}"></script> 
-  </body>
-</html>
+{%endblock content %}
