sitio terminado, falta hacer dinámico el sitio con django y configurar el formulario de dudas

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,19 +22,21 @@
             <div class="line">
               <div class="margin">
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <a class="image-hover-zoom margin-bottom" href="/"><img src="{% static 'img/img-03.jpg' %}" alt=""></a>
-                  <h2>Cracteristica 1</h2>
-                  <p class="margin-bottom">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                
+                  <a class="image-hover-zoom margin-bottom" ><img src="{% static 'img/actividades.png' %}" alt=""></a>
+                  <h2>Objetivo</h2>
+
+                  <p class="margin-bottom text-center">Es un orgullo el poder contribuir con las personas haciendo lo que más nos gusta: Conservar sus recuerdos. Mediante marcos, cajitas de madera,bastidores y restauraciones poniendo énfasis en la calidad de los materiales utilizados, la presentación de los trabajos y ofreciendo una variedad de molduras para todo tipo de gustos.</p>                 
                 </div>
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <a class="image-hover-zoom margin-bottom" href="/"><img src="{% static 'img/img-04.jpg' %}" alt=""></a>
-                  <h2>Cracteristica 2</h2>
-                  <p class="margin-bottom">Iriure dolor in hendrerit duis autem vel eum in vulputate velit esse molestie vel illum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <a class="image-hover-zoom margin-bottom" ><img src="{% static 'img/money.png' %}" alt=""></a>
+                  <h2>Precios especiales a mayoristas, académias y foto estudios</h2>
+                  <p class="margin-bottom">Pregunta por los precios especiales que tenemos para ti.</p>                
                 </div>
+                
                 <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <a class="image-hover-zoom margin-bottom" href="/"><img src="{% static 'img/img-05.jpg' %}" alt=""></a>
-                  <h2>Cracteristica 2</h2>
-                  <p class="margin-bottom">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
+                  <a class="image-hover-zoom margin-bottom" ><img src="{% static 'img/objetivo.png' %}" alt=""></a>
+                  <h2>Que hacemos</h2>
+                  <p class="margin-bottom">Enmarcado de fotografías, litografías, pinturas, diplomas, posters, espejos. Poliester, texturización,vidrio antireflejante. Molduras varias lisas y con grabados. Restauración,ampliación e impresión de fotos. Portaretratos. Cajitas de madera</p>                 
                 </div>
               </div>
             </div>
@@ -42,50 +44,26 @@
           <section class="section-top-padding background-white">
             <div class="line">
               <h2 class="text-s-size-40 text-size-50 text-line-height-1 margin-bottom-10 text-thin text-center"><span class="text-dark">-</span> Nuestro Equipo<span class="text-dark">-</span></h2> 
-              <p class="margin-bottom-50 text-center">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy<br> nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-              </p>  
+             
               <div class="carousel-blocks">                                                                                                            
                 <div class="item">                                                                                                                                                                                                     
                   <div class="padding">
-                    <img class="full-img border-image border-primary" src="{% static 'img/team-01.jpg' %}" alt="" title="Team" />
+                    <img class="full-img border-image border-primary" src="{% static 'img/user.png' %}" alt="" title="Team" />
                     <h3 class="text-s-size-16 text-size-20 text-line-height-1 text-dark margin-top-20 margin-bottom-0">Daniel Infante Suarez</h3>
-                    <p class="text-size-14 text-dark margin-bottom-10">Boss</p>
+                    <p class="text-size-14 text-dark margin-bottom-10">Dueño y ejecutivo de Ventas</p>
                     <a target="_blank" href="https://www.facebook.com"><i class="icon-facebook_circle text-size-20"></i></a> <a target="_blank" href="https://www.twitter.com"><i class="icon-twitter_circle text-size-20"></i></a> <a target="_blank" href="https://www.google.com"><i class="icon-google_plus_circle text-size-20"></i></a>
                   </div>                                                                                                                                                              
                 </div>
+                
                 <div class="item">                                                                                                                                                                                                     
                   <div class="padding">
-                    <img class="full-img border-image border-primary" src="{% static 'img/team-02.jpg' %}" alt="" title="Team" />
-                    <h3 class="text-s-size-16 text-size-20 text-line-height-1 text-dark margin-top-20 margin-bottom-0">Jane Naismith</h3>
-                    <p class="text-size-14 text-dark margin-bottom-10">Graphic Designer</p>
-                    <a target="_blank" href="https://www.facebook.com"><i class="icon-facebook_circle text-size-20"></i></a> <a target="_blank" href="https://www.google.com"><i class="icon-google_plus_circle text-size-20"></i></a>
-                  </div>                                                                                                                                                              
-                </div>
-                <div class="item">                                                                                                                                                                                                     
-                  <div class="padding">
-                    <img class="full-img border-image border-primary" src="{% static 'img/team-03.jpg' %}" alt="" title="Team" />
+                    <img class="full-img border-image border-primary" src="{% static 'img/user.png' %}" alt="" title="Team" />
                     <h3 class="text-s-size-16 text-size-20 text-line-height-1 text-dark margin-top-20 margin-bottom-0">Luis Antonio Quintero Infante</h3>
-                    <p class="text-size-14 text-dark margin-bottom-10">Web Developer</p>
+                    <p class="text-size-14 text-dark margin-bottom-10">Desarrollador web</p>
                     <a target="_blank" href="https://www.facebook.com"><i class="icon-facebook_circle text-size-20"></i></a> <a target="_blank" href="https://www.twitter.com"><i class="icon-twitter_circle text-size-20"></i></a> <a target="_blank" href="https://www.google.com"><i class="icon-google_plus_circle text-size-20"></i></a>
                   </div>                                                                                                                                                              
                 </div>                
-                <div class="item">                                                                                                                                                                                                     
-                  <div class="padding">
-                    <img class="full-img border-image border-primary" src="{% static 'img/team-04.jpg' %}" alt="" title="Team" />
-                    <h3 class="text-s-size-16 text-size-20 text-line-height-1 text-dark margin-top-20 margin-bottom-0">John Sandman</h3>
-                    <p class="text-size-14 text-dark margin-bottom-10">Account Manager</p>
-                    <a target="_blank" href="https://www.facebook.com"><i class="icon-facebook_circle text-size-20"></i></a> <a target="_blank" href="https://www.twitter.com"><i class="icon-twitter_circle text-size-20"></i></a> <a target="_blank" href="https://www.google.com"><i class="icon-google_plus_circle text-size-20"></i></a>
-                  </div>                                                                                                                                                              
-                </div>                
-                <div class="item">                                                                                                                                                                                                     
-                  <div class="padding">
-                    <img class="full-img border-image border-primary" src="{% static 'img/team-05.jpg' %}" alt="" title="Team" />
-                    <h3 class="text-s-size-16 text-size-20 text-line-height-1 text-dark margin-top-20 margin-bottom-0">Melissa Style</h3>
-                    <p class="text-size-14 text-dark margin-bottom-10">Graphic Designer</p>
-                    <a target="_blank" href="https://www.twitter.com"><i class="icon-twitter_circle text-size-20"></i></a> <a target="_blank" href="https://www.google.com"><i class="icon-google_plus_circle text-size-20"></i></a>
-                  </div>                                                                                                                                                              
-                </div>                              
+                                     
               </div>                                                                                                                                                                                                                                                                                         
             </div> 
           </section>
@@ -93,45 +71,22 @@
             <div class="line">      
               <h2 class="text-s-size-40 text-size-50 text-line-height-1 margin-bottom-10 text-thin text-center"><span class="text-dark">-</span> Nuestros Clientes <span class="text-dark">-</span></h2> 
               <p class="margin-bottom-50 text-center">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy<br> nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+              Nuestros clientes son la gran apuesta de valor, el verdadero aval de la compañía y la mayor garantía de continuidad. Por este motivo, les agradecemos la confianza que nos han brindado durante toda nuestra trayectoria.
               </p>                                                                                               
               <div class="margin2x">                                                                                              
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                 
-                  <img class="margin-bottom-40" src="{% static 'img/logo-1.png' %}" alt="">                                                                                                                                                            
+                <div class="s-6 m-4 l-3">                                                                                                                                                                                                 
+                  <img class="margin-bottom-40" src="{% static 'img/sendero.jpeg' %}" alt="">                                                                                                                                                            
                 </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img class="margin-bottom-40" src="{% static 'img/logo-2.png' %}" alt="">                                                                                                                                                            
+                <div class="s-6 m-4 l-3">                                                                                                                                                                                                   
+                  <img class="margin-bottom-40" src="{% static 'img/terranova.jpg' %}" alt="">                                                                                                                                                            
                 </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img class="margin-bottom-40" src="{% static 'img/logo-3.png' %}" alt="">                                                                                                                                                            
+                <div class="s-6 m-4 l-3">                                                                                                                                                                                                   
+                  <img class="margin-bottom-40" src="{% static 'img/nissan.png' %}" alt="">                                                                                                                                                            
                 </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img class="margin-bottom-40" src="{% static 'img/logo-4.png' %}" alt="">                                                                                                                                                            
+                <div class="s-6 m-4 l-3">                                                                                                                                                                                                   
+                  <img class="margin-bottom-40" src="{% static 'img/ford.jpeg' %}" alt="">                                                                                                                                                            
                 </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                 
-                  <img class="margin-bottom-40" src="{% static 'img/logo-5.png' %}" alt="">                                                                                                                                                            
-                </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                 
-                  <img class="margin-bottom-40" src="{% static 'img/logo-1.png' %}" alt="">                                                                                                                                                            
-                </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img class="margin-m-bottom-40" src="{% static 'img/logo-2.png' %}" alt="">                                                                                                                                                            
-                </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img class="margin-m-bottom-40" src="{% static 'img/logo-3.png' %}" alt="">                                                                                                                                                            
-                </div>             
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img class="margin-m-bottom-40" src="{% static 'img/logo-4.png' %}" alt="">                                                                                                                                                            
-                </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img class="margin-m-bottom-40" src="{% static 'img/logo-5.png' %}" alt="">                                                                                                                                                            
-                </div>
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img class="margin-m-bottom-40" src="{% static 'img/logo-1.png' %}" alt="">                                                                                                                                                            
-                </div>             
-                <div class="s-6 m-4 l-2">                                                                                                                                                                                                   
-                  <img src="{% static 'img/logo-2.png' %}" alt="">                                                                                                                                                            
-                </div>                                                                                                                                                                                              
+                                                                                                                                                                                              
               </div>
             </div>
           </section>
