--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -4,46 +4,13 @@
 {%block content %}
 {%include 'snippets/botonfijo.html'%}
 
-
-<header class="section background-primary text-center">
-  <h1 class="text-white margin-bottom-0 text-size-50 text-thin text-line-height-1">Cajas</h1>
-</header>
-
-
-    
-<br><br>
-
-
-<section class="section-top-padding background-white"> 
-            <div class="line">
-              <div class="margin">
-                <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <a class="image-hover-zoom margin-bottom" href="/"><img src="{% static 'img/cajitapersonalizada.jpeg' %}" alt=""></a>
-                  <h2>Se hacen cajitas personalizadas</h2>
-                  <p class="margin-bottom">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                
-                </div>
-                <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <a class="image-hover-zoom margin-bottom" href="/"><img src="{% static 'img/cajitavariedad.jpeg' %}" alt=""></a>
-                  <h2>Variedad en molduras y alturas</h2>
-                  <p class="margin-bottom">Iriure dolor in hendrerit duis autem vel eum in vulputate velit esse molestie vel illum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
-                </div>
-                <div class="s-12 m-12 l-4 margin-m-bottom">
-                  <a class="image-hover-zoom margin-bottom" href="/"><img src="{% static 'img/cajitacolores.jpeg' %}" alt=""></a>
-                  <h2>Gran variedad de colores</h2>
-                  <p class="margin-bottom">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>                 
-                </div>
-
-              </div>
-            </div>
-</section>
-
-
 <!-- MAIN -->
     <main role="main">
       <!-- Content -->
       <article>
-        <br><br><br>
-       <h2 class="text-s-size-40 text-size-50 text-line-height-1 margin-bottom-10 text-thin text-center"><span class="text-dark"></span> Algunas cajitas hechas a clientes<span class="text-dark"></span></h2> 
+        <header class="section background-primary text-center">
+          <h1 class="text-white margin-bottom-0 text-size-50 text-thin text-line-height-1">Gallery</h1>
+        </header>
         <div class="section background-white"> 
           <div class="line">
             <div class="margin">
@@ -54,7 +21,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas1.jpeg' %}" alt="" title="Portfolio Image 1" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 1" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -64,7 +31,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas2.jpeg' %}" alt="" title="Portfolio Image 2" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 2" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -74,7 +41,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas3.jpeg' %}" alt="" title="Portfolio Image 3" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 3" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -84,7 +51,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas4.jpeg' %}" alt="" title="Portfolio Image 4" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 4" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -94,7 +61,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas5.jpeg' %}" alt="" title="Portfolio Image 5" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 5" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -104,7 +71,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas6.jpeg' %}" alt="" title="Portfolio Image 6" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 6" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -114,7 +81,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas7.jpeg' %}" alt="" title="Portfolio Image 7" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 7" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -124,7 +91,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas8.jpeg' %}" alt="" title="Portfolio Image 8" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 8" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -134,7 +101,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas9.jpeg' %}" alt="" title="Portfolio Image 9" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 9" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -144,7 +111,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas10.jpeg' %}" alt="" title="Portfolio Image 10" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 10" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -154,7 +121,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas11.jpeg' %}" alt="" title="Portfolio Image 11" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 11" />
                 </div>  
               </div>
               <div class="s-12 m-6 l-3">
@@ -164,7 +131,7 @@
                       <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>  
                     </div> 
                   </div> 
-                  <img src="{% static 'img/trabajoscajitas12.jpeg' %}" alt="" title="Portfolio Image 12" />
+                  <img src="{% static 'img/portfolio/thumb-01.jpg' %}" alt="" title="Portfolio Image 12" />
                 </div>  
               </div>
             </div>  
