--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -17,8 +17,7 @@
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/marcos">Marcos</a></li>
                 <li><a href="/cajas">Cajas</a></li>
-                <li><a href="/recuperacion">Recuperación de Fotografías</a></li>
-                <li><a href="/litografias">Litografías</a></li>
+                <li><a href="/restauracion">Restauración de Fotografías</a></li>
                 <li><a href="/about">Acerca de nosotros</a></li>             
                 <li><a href="/contact">Contacto</a></li>
               </ul>
