--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,16 +10,17 @@
             <div class="line text-center">  
             <br><br>      
               <h1 class="text-dark text-s-size-30 text-m-size-40 text-l-size-headline text-thin text-line-height-1">Contactanos</h1>
-              <p class="margin-bottom-0 text-size-16 text-dark">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.<br>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>
+              <p class="margin-bottom-0 text-size-16 text-dark">Te agradecemos tu interés en contactarnos. Nos encantará poder contestar cualquier pregunta que puedas tener. Por eso, te ofrecemos diferentes medios para responder a cada una de tus solicitudes de la manera que más te convenga.</p>
             </div>  
           </header>
+          
           <section class="full-width background-dark">
-            <div class="s-12 m-12 l-6">
-              <!-- Change the background image -->  
-              <div style="background-image: url({% static 'img/img-contact.jpg' %});" class="contact-image" ></div>
-            </div>
-            <div class="s-12 m-12 l-6 text-center">
+            <div class="s-12 grayscale center" class="contact-image">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3765.4217846055258!2d-98.9167647!3d19.3074954!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ce1e7c67919a67%3A0x7c3b50b91e0f457c!2sBalsas+31%2C+Jose+de+la+Mora%2C+56556+Ixtapaluca%2C+M%C3%A9x.!5e0!3m2!1ses-419!2smx!4v1511846031134"  width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe> 
+                  
+          </div>
+            
+            <div class="s-12  text-center">
               <div class="padding-2x">
                 <i class="icon-sli-location-pin text-white text-size-30 center"></i>
                 <h2 class="text-size-20 margin-bottom-0 text-white">Dirección</h2>                
@@ -30,7 +31,7 @@
             
                 <i class="icon-sli-envelope text-white text-size-30 center margin-top-20"></i>
                 <h2 class="text-size-20 margin-bottom-0 text-white">Correo electrónico</h2>                
-                <a class="text-primary-hover" href="mailto:contact@sampledomain.com">multimarcos_68@hotmail.com</a><br>
+                <a class="text-primary-hover" href="mailto:contact@sampledomain.com">multimarcos_68@hotmail.com</a><br><br>
                 <i class="icon-sli-earphones-alt text-white text-size-30 center margin-top-20"></i>
                 <h2 class="text-size-20 margin-bottom-0 text-white">Números telefónicos</h2>                
                 <p>Tel: (55) 26 45 96 53</p>
@@ -41,7 +42,7 @@
           
           <section class="section background-white">
             <div class="s-12 m-12 l-4 center">
-              <h4 class="text-size-20 margin-bottom-20 text-dark text-center">Dudas?,escribenos</h4>
+              <h4 class="text-size-20 margin-bottom-20 text-dark text-center"> ‎¿Tienes dudas?, escribenos</h4>
               <form name="contactForm" class="customform" method="post">
                 <div class="s-12">
                   <div class="margin">
