--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             <br>       
             <br>
               <h1 class="text-dark text-s-size-30 text-m-size-40 text-l-size-headline text-thin text-line-height-1">Conservamos recuerdos</h1>
-              <p class="margin-bottom-0 text-size-16 text-dark">En nuestro trabajo apreciamos a nuestros clientes y por ello brindamos servicios de enmarcado que superen sus expectativas.<br>
+              <p class="margin-bottom-0 text-size-16 text-dark">En nuestro trabajo apreciamos a nuestros clientes y por ello brindamos servicios de enmarcado,cajitas de madera y restauración de fotografías que superen sus expectativas.<br>
               Poniendo énfasis en la calidad de los materiales utilizados, la presentación de los trabajos y ofreciendo una variedad de molduras para todo tipo de gustos.</p>
             </div>  
           </header>
