--- a/templates/litografias.html
+++ b/templates/litografias.html
@@ -3,7 +3,143 @@
 
 {%block content %}
 {%include 'snippets/botonfijo.html'%}
-      
+
+<header class="section background-primary text-center">
+  <h1 class="text-white margin-bottom-0 text-size-50 text-thin text-line-height-1">Litografías</h1>
+</header>
+
+
+    
+<br><br>
+<section >
+         <!-- CAROUSEL -->  
+         <div class="line ">
+            <div id="owl-demo" class="owl-carousel owl-theme  margin-bottom ">
+               <div class="item"><img src="{% static 'img/940x380.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-2.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-3.jpg' %}" alt=""></div>
+            </div>
+         </div>
+         <!-- HOME PAGE BLOCK -->      
+         <div class="line">
+            <div class="margin">
+               <div class="s-12 m-6 l-4 margin-bottom">
+                  <div class="box">
+                     <h2>About</h2>
+                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  </div>
+               </div>
+               <div class="s-12 m-6 l-4 margin-bottom">
+                  <div class="box">
+                     <h2>Company</h2>
+                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  </div>
+               </div>
+               <div class="s-12 m-12 l-4 margin-bottom">
+                  <div class="box">
+                     <h2>Services</h2>
+                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- ASIDE NAV AND CONTENT -->
+         <div class="line">
+            <div class="box margin-bottom">
+               <div class="margin">
+                  <!-- CONTENT -->
+                  <article class="s-12 m-7 l-8">
+                     <h1>Content</h1>
+                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet 
+                        dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit 
+                        lobortis nisl ut aliquip ex ea commodo consequat.
+                     </p>
+                     <h3>Sub Header</h3>
+                     <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore 
+                        eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril 
+                        delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue 
+                        nihil imperdiet doming id quod mazim placerat facer possim assum. 
+                     </p>
+                  </article>
+                  <!-- ASIDE NAV -->
+                  <div class="s-12 m-5 l-4">
+                     <h3>Navigation</h3>
+                     <div class="aside-nav">
+                        <ul>
+                           <li><a>Home</a></li>
+                           <li>
+                              <a>Product</a>
+                              <ul>
+                                 <li><a>Product 1</a></li>
+                                 <li><a>Product 2</a></li>
+                                 <li>
+                                    <a>Product 3</a>
+                                    <ul>
+                                       <li><a>Product 3-1</a></li>
+                                       <li><a>Product 3-2</a></li>
+                                       <li><a>Product 3-3</a></li>
+                                    </ul>
+                                 </li>
+                              </ul>
+                           </li>
+                           <li>
+                              <a>Company</a>
+                              <ul>
+                                 <li><a>About</a></li>
+                                 <li><a>Location</a></li>
+                              </ul>
+                           </li>
+                           <li><a>Contact</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- GALLERY CAROUSEL -->
+         <div class="line">
+            <h2>Gallery</h2>
+            <div id="owl-demo2" class="owl-carousel margin-bottom">
+               <div class="item"><img src="{% static 'img/940x380.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-2.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-3.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-2.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-3.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-2.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-3.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-2.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-3.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-2.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380-3.jpg' %}" alt=""></div>
+               <div class="item"><img src="{% static 'img/940x380.jpg' %}" alt=""></div>
+            </div>
+         </div>
+      </section>
+
      
-      
+<script type="text/javascript" src="js/responsee.js"></script>               
+      <script type="text/javascript" src="owl-carousel/owl.carousel.js"></script>  
+      <script type="text/javascript">
+         jQuery(document).ready(function($) {	  
+           $("#owl-demo").owlCarousel({		
+           	navigation : true,
+           	slideSpeed : 300,
+           	paginationSpeed : 400,
+           	autoPlay : true,
+           	singleItem:true
+           });
+           $("#owl-demo2").owlCarousel({
+        		items : 4,
+           	lazyLoad : true,
+           	autoPlay : true,
+           	navigation : true,
+           	pagination : false
+           });
+         });	 
+      </script>
+
 {%endblock content %}
