--- a/templates/snippets/botonfijo.html
+++ b/templates/snippets/botonfijo.html
@@ -1,3 +1,3 @@
 {% load staticfiles %}
 <!-- PREMIUM FEATURES BUTTON -->
-    <a target="_blank" class="hide-s" href="/about" style="position:fixed;top:120px;right:-14px;z-index:10;"><img src="{% static 'img/phone.png' %}" alt=""></a>
+    <a target="_blank" class="hide-s" href="/contact" style="position:fixed;top:120px;right:-14px;z-index:10;"><img src="{% static 'img/phone.png' %}" alt=""></a>
